[workspace]
members = [
    "resource/luban_lib",
    "resource/cfg",
    "resource/macros",
    "protocol",
    "common",
    "network",
    "lib", "bin/game", "bin/gate", "bin/login", "bin/world", "bin/allinone",
]
[workspace.dependencies]
arc-swap = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
anyhow = "*"
crossbeam-utils = "*"
bytes = "*"
prost = "*"
prost-build = "*"
serde = "*"
async-trait = "*"
kameo = { version = "0.15", features = ["remote"] }
thiserror = "*"
tracing = "0.1.41"
tracing-subscriber = "*"
tracing-glog = "*"