[workspace]
members = [
    "resource/luban_lib",
    "resource/cfg",
    "resource/macros",
    "protocol",
    "common",
    "network",
    "lib",
    "bin",
]
resolver = "3"
[workspace.dependencies]
arc-swap = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
anyhow = "*"
crossbeam-utils = "*"
bytes = "*"
prost = "*"
prost-build = "*"
serde = "*"
async-trait = "*"
kameo = { version = "0.15", features = ["remote"] }
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["local-time", "env-filter", "tracing-log"] }
tracing-appender = "*"
log = "0.4.17"
time = { version = "0.3.41", features = ["local-offset"] }
futures = { version = "*" }