[package]
name = "qs001-server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "common" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lib = { path = "lib" }
futures = { workspace = true }


[workspace]
members = [
    "resource/luban_lib",
    "resource/cfg",
    "resource/macros",
    "protocol",
    "common",
    "network",
    "lib",
]
resolver = "3"
[workspace.dependencies]
arc-swap = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
anyhow = "*"
crossbeam-utils = "*"
bytes = "*"
prost = "*"
prost-build = "*"
serde = "*"
async-trait = "*"
kameo = { git = "https://github.com/tqwewe/kameo.git", features = ["remote"] }
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["local-time", "env-filter", "tracing-log"] }
tracing-appender = "*"
log = "0.4.17"
time = { version = "0.3.41", features = ["local-offset"] }
futures = { version = "*" }
bitflags = { version = "2.7.x", features = ["serde"] }


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "game"
path = "src/game.rs"
[[bin]]
name = "gate"
path = "src/gate.rs"
[[bin]]
name = "world"
path = "src/world.rs"
[[bin]]
name = "login"
path = "src/login.rs"