[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2"] }
r2d2 = "*"
anyhow = { workspace = true }
cfg = { path = "../resource/cfg" }
#aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
#aws-sdk-dynamodb = "1.67.0"
luban_lib = { path = "../resource/luban_lib" }
crossbeam = "*"
arc-swap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = "*"
serde = { version = "*", features = ["derive"] }
bytes = { workspace = true }
tokio = { workspace = true }
kameo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
log = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }