[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = {workspace = true}
anyhow = { workspace = true }
cfg = { path = "../resource/cfg" }
#aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
#aws-sdk-dynamodb = "1.67.0"
luban_lib = { path = "../resource/luban_lib" }
crossbeam = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = "*"
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
kameo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
log = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }