[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
crossbeam = "*"
kameo = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
network = { path = "../network" }
thiserror = { workspace = true }
log = "0.4.26"
serde = { workspace = true }
protocol = { path = "../protocol" }
prost = { workspace = true }
message-io = "*"