[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
kameo = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
protocol = { path = "../protocol" }
prost = { workspace = true }
message-io = "*"
bytes = { workspace = true }
scc = "*"
integer-encoding = { workspace = true }