[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
redis = { workspace = true }
kameo = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
protocol = { path = "../protocol" }
prost = { workspace = true }
message-io = "0.19"
bytes = { workspace = true }
scc = "*"
integer-encoding = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
backon = { workspace = true }
lazy_static = "1.5.0"
crossbeam = { workspace = true }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }