[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
kameo = { version = "*" }
tokio = { workspace = true }
tracing = "0.1.41"
bytes = { workspace = true }
tokio-tungstenite = "*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }