[package]
name = "network"
version = "0.1.0"
edition = "2024"

[[example]]
name = "tcp"
path = "examples/tcp.rs"


[[example]]
name = "websocket"
path = "examples/websocket.rs"

[dependencies]
anyhow = { workspace = true }
kameo = { version = "*" }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = "*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tracing = { workspace = true }