[package]
name = "network"
version = "0.1.0"
edition = "2024"

[[example]]
name = "tcp"
path = "examples/tcp.rs"


[[example]]
name = "websocket"
path = "examples/websocket.rs"

[dependencies]
anyhow = { workspace = true }
kameo = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tracing = { workspace = true }
fastwebsockets = { version = "0.10.0", features = ["unstable-split"] }
