[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
prost-build = { workspace = true }
regex = "1.11.1"
serde = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }