[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
common = { path = "../../common" }
kameo = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
servers = {path = "../../servers"}