[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg = { path = "../../gen/cfg" }
aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67.0"
ractor = { workspace = true }
tracing = { workspace = true }
luban_lib = { path = "../../luban_lib" }
crossbeam = "*"
arc-swap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }